--- a/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
@@ -19,13 +19,13 @@
           <table class="table">
             <thead>
             <tr>
-              <th scope="col">{{"dashboard.candidateName" | translate}}</th>
-              <th scope="col">{{"dashboard.position" | translate}}</th>
-              <th scope="col">{{"dashboard.mobile" | translate}}</th>
-              <th scope="col">{{"dashboard.email" | translate}}</th>
+              <th scope="col">{{"tabs.candidateName" | translate}}</th>
+              <th scope="col">{{"tabs.position" | translate}}</th>
+              <th scope="col">{{"tabs.mobile" | translate}}</th>
+              <th scope="col">{{"shared.email" | translate}}</th>
               <!-- <th scope="col">{{"postJob.location" | translate}}</th> -->
-              <th scope="col">Job Details</th>
-              <th scope="col">Feedback</th>
+              <th scope="col"> {{"tabs.jobDetails" | translate}}</th>
+              <th scope="col">{{"tabs.feedback" | translate}}</th>
               <!-- <th scope="col">{{"dashboard.action" | translate}}</th> -->
             </tr>
             </thead>
