--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -7,7 +7,7 @@
 					<i class="fas fa-arrow-left"></i>
 				</button>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Candidate View Profile</li>
+          <li class="breadcrumb-item active" aria-current="page">{{"shared.candidateProfile" | translate }}</li>
         </ol>
       </div>
       <div class="col-lg-7 clearfix">
@@ -40,7 +40,7 @@
       </div>
       <div class="col-lg-4">
         <div class="title">
-          <h2>Matchings</h2>
+          <h2>{{"shared.matchings" | translate }}</h2>
         </div>
 		<div class="sidebar-widget text-left">
           <div class="card" *ngFor="let item of postedJobsMatchDetailsArray; let i=index">
