--- a/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
@@ -2,7 +2,7 @@
 	<div class="row mt-5">	
 		<div class="col-lg-12 mb-4">
 			<h6>
-				Add Screening Process
+				{{"shared.add" | translate}} {{"shared.screeningProcess" | translate}}
 				<span class="required-asterisk">*</span>
 			</h6>
 		</div>
