--- a/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.html
@@ -5,8 +5,8 @@
 				<div class="row">
 					<div class="col-lg-5 caption">
 						<ul class="list-group">
-							<li *ngIf="!isMultipleMatches" class="list-group-item text-capitalize ">{{"postJob.totalYearsOfExperience" | translate }}</li>
-							<li *ngIf="isMultipleMatches" class="list-group-item text-capitalize ">{{"postJob.shorttotalYearsOfExperience" | translate }}</li>
+							<li *ngIf="!isMultipleMatches" class="list-group-item text-capitalize ">{{"userProfile.totalYearsOfExp" | translate }}</li>
+							<li *ngIf="isMultipleMatches" class="list-group-item text-capitalize ">{{"matches.shorttotalYearsOfExperience" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-7 info">
