--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -7,7 +7,7 @@
 				  <i class="fas fa-arrow-left"></i>
 				</button>
 				<ol class="breadcrumb">
-				  <li class="breadcrumb-item active" aria-current="page">Candidate Multiple Job Matches</li>
+				  <li class="breadcrumb-item active" aria-current="page">{{"shared.candidateMultipleJobMatches" | translate}}</li>
 				</ol>
 			</div>
 			<div class="col-lg-7 clearfix">
@@ -61,14 +61,14 @@
 												</div>
 												<div class="col-lg-4"  [ngClass]="(isMultipleMatches === true)?'isMatchesView':''">
 													<a class="btn btn-outline-blue btn-sm text-right" href="javascript:;" (click)="onToggleJDModal(true,matchingJob?.jobs?.description)">	
-													<i class="fas fa-file-alt"></i> Description</a>
+													<i class="fas fa-file-alt"></i> {{"shared.description" | translate}}</a>
 													
 													<div class="media mt-2" >
 														<div class="media-body">
-															<h6 *ngIf="matchingJob?.jobs?.salary_type == 0" class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / hr'}}</h6>
-															<h6 *ngIf="matchingJob?.jobs?.salary_type == 1" class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / Annual '}}</h6>
-															<h6 *ngIf="matchingJob?.jobs?.salary_type == 2" class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / month'}}</h6>
-															<h6 class="text-capitalize job-cardh6">{{"postJob.remote" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.remote)}} </h6>
+															<h6 *ngIf="matchingJob?.jobs?.salary_type == 0" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / hr'}}</h6>
+															<h6 *ngIf="matchingJob?.jobs?.salary_type == 1" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / Annual '}}</h6>
+															<h6 *ngIf="matchingJob?.jobs?.salary_type == 2" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJob?.jobs?.salary_currency)?.symbol + matchingJob?.jobs?.salary + ' / month'}}</h6>
+															<h6 class="text-capitalize job-cardh6">{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.remote)}} </h6>
 															<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(matchingJob?.jobs?.willing_to_relocate)}} </h6> -->
 														</div>
 													</div>
@@ -80,7 +80,7 @@
 									<!--Body Sec-->
 									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-3' : 'mt-4'">
 										<div class="score mt-5" [ngClass]="{'score-txt-green': matchingJob?.jobs.score >= 5, 'score-txt-orange': (matchingJob?.jobs.score < 5 && matchingJob?.jobs.score > 0), 'score-txt-red': (matchingJob?.jobs.score == 0)}">
-											SCORE <span>{{matchingJob?.jobs.score ? matchingJob?.jobs.score :0}}/10</span>
+											{{"shared.score" | translate}} <span>{{matchingJob?.jobs.score ? matchingJob?.jobs.score :0}}/10</span>
 										</div>
 										<app-shared-job-profile-multiple-matches [jobInfo]="matchingJob?.jobs"  [isMultipleMatches]="isMultipleMatches" 
 										[missingElement]="true" [matchedElement]="true"
@@ -89,7 +89,7 @@
 									</div>
 									<div class="col-lg-12 info" style="text-align:end;" *ngIf=" matchingJob?.jobs?.status ==1">
 										<button (click)="onToggleSendMail(true, matchingJob?.jobs)" type="button" class="btn btn-outline-orange ml-auto"  style="bottom: 15px; right: 15px;"> <i
-												class="fas fa-paper-plane"></i> {{"dashboard.sendMail" | translate}}</button>
+												class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate}}</button>
 									</div>
 								</div>
 							</div>
@@ -113,14 +113,14 @@
 												</div>
 												<div class="col-lg-4"  [ngClass]="(isMultipleMatches === true)?'isMatchesView':''">
 													<a class="btn btn-outline-blue btn-sm text-right" href="javascript:;" (click)="onToggleJDModal(true,matchingJobNew?.jobs?.description)">	
-													<i class="fas fa-file-alt"></i> Description</a>
+													<i class="fas fa-file-alt"></i> {{"shared.description" | translate}}</a>
 													
 													<div class="media mt-2" >
 														<div class="media-body">
-															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 0" class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / hr'}}</h6>
-															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 1" class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / Annual '}}</h6>
-															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 2" class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / month'}}</h6>
-															<h6 class="text-capitalize job-cardh6">{{"postJob.remote" | translate}} :  {{onGetYesOrNoValue(matchingJobNew?.jobs?.remote)}} </h6>
+															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 0" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / hr'}}</h6>
+															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 1" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / Annual '}}</h6>
+															<h6 *ngIf="matchingJobNew?.jobs?.salary_type == 2" class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(matchingJobNew?.jobs?.salary_currency)?.symbol + matchingJobNew?.jobs?.salary + ' / month'}}</h6>
+															<h6 class="text-capitalize job-cardh6">{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(matchingJobNew?.jobs?.remote)}} </h6>
 															<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(matchingJobNew?.jobs?.willing_to_relocate)}} </h6> -->
 														</div>
 													</div>
@@ -154,7 +154,7 @@
 									<!--Body Sec-->
 									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-3' : 'mt-4'">
 										<div class="score mt-5" [ngClass]="{'score-txt-green': matchingJobNew?.jobs.score >= 5, 'score-txt-orange': (matchingJobNew?.jobs.score < 5 && matchingJobNew?.jobs.score > 0), 'score-txt-red': (matchingJobNew?.jobs.score == 0)}">
-											SCORE <span>{{matchingJobNew?.jobs.score ? matchingJobNew?.jobs.score : 0}}/10</span>
+											{{"shared.score" | translate}}  <span>{{matchingJobNew?.jobs.score ? matchingJobNew?.jobs.score : 0}}/10</span>
 										</div>
 										<app-shared-job-profile-multiple-matches [jobInfo]="matchingJobNew?.jobs"  [isMultipleMatches]="isMultipleMatches" 
 										[missingElement]="true" [matchedElement]="true"
@@ -163,7 +163,7 @@
 									</div>
 									<div class="col-lg-12 info" style="text-align:end;"  *ngIf=" matchingJobNew?.jobs?.status ==1" >
 										<button (click)="onToggleSendMail(true, matchingJobNew?.jobs)" type="button" class="btn btn-outline-orange ml-auto"  style="bottom: 15px; right: 15px;"> <i
-												class="fas fa-paper-plane"></i> {{"dashboard.sendMail" | translate}}</button>
+												class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate}}</button>
 									</div>
 								</div>
 							</div>
