--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -18,14 +18,14 @@
           <table class="table">
             <thead>
             <tr>
-              <th scope="col">{{"dashboard.candidateName" | translate}}</th>
-              <th scope="col">{{"dashboard.position" | translate}}</th>
-              <th scope="col">{{"dashboard.mobile" | translate}}</th>
-              <th scope="col">{{"dashboard.email" | translate}}</th>
+              <th scope="col">{{"tabs.candidateName" | translate}}</th>
+              <th scope="col">{{"tabs.position" | translate}}</th>
+              <th scope="col">{{"tabs.mobile" | translate}}</th>
+              <th scope="col">{{"shared.email" | translate}}</th>
               <!-- <th scope="col">{{"postJob.location" | translate}}</th> -->
-              <th scope="col">{{"dashboard.jobDetails" | translate}}</th>
-              <th scope="col">{{"dashboard.status" | translate}}</th>
-              <th scope="col">Message</th>
+              <th scope="col">{{"tabs.jobDetails" | translate}}</th>
+              <th scope="col">{{"shared.status" | translate}}</th>
+              <th scope="col">{{"tabs.message" | translate}}</th>
              <!--  <th scope="col" class="text-center">{{"dashboard.action" | translate}}</th> -->
             </tr>
             </thead>
@@ -99,7 +99,7 @@
 <ng-template *ngIf="isCheckModel" #checkModal let-modal>
 	<div class="modal-content">
 		<div class="modal-header">
-			<h5 class="modal-title" id="exampleModalLabel">Message</h5>
+			<h5 class="modal-title" id="exampleModalLabel">{{"tabs.message" | translate}}</h5>
 			<button type="button" class="close" (click)="cancelCheck()">
 				<span aria-hidden="true">×</span>
 			</button>
@@ -121,21 +121,21 @@
 			</div>
 			<form class="mt-3">
 				<div class="form-group">
-					<label for="exampleFormControlSelect1">Status</label>
+					<label for="exampleFormControlSelect1">{{"shared.status" | translate}}</label>
 					<input type="text" class="form-control text-capitalize" name="messagePopupValueStatus" id ="messagePopupValueStatus" readonly [(ngModel)]="messagePopupValueStatus">
 					
 				</div>
 				<div class="form-group">
-					<label for="exampleFormControlTextarea1">Status Message</label>
+					<label for="exampleFormControlTextarea1">{{"shared.statusMessage" | translate}}</label>
 					<textarea appMarkAsterisk class="form-control" name="exampleFormControlTextarea1"  id="exampleFormControlTextarea1" rows="4" [(ngModel)]="selectedStatusMessage" >
 					</textarea>
 				</div>
-				<h6 *ngIf="isErrorShownValue" style="color:red;"> Please select the valid status </h6>
+				<h6 *ngIf="isErrorShownValue" style="color:red;">{{"shared.validStatus" | translate}}  </h6>
 			</form>
 		</div>
 		<div class="modal-footer">
-			<button type="button" class="btn btn-sm btn-secondary" (click)="cancelCheck()" >Close</button>
-			<button type="button" [disabled]="selectedStatusValue ==null || selectedStatusValue =='' || selectedStatusMessage == null || selectedStatusMessage =='' " class="btn btn-sm btn-primary"  (click)="sendMessage()"  >Send Message</button>
+			<button type="button" class="btn btn-sm btn-secondary" (click)="cancelCheck()" >{{"shared.close" | translate}}</button>
+			<button type="button" [disabled]="selectedStatusValue ==null || selectedStatusValue =='' || selectedStatusMessage == null || selectedStatusMessage =='' " class="btn btn-sm btn-primary"  (click)="sendMessage()"  >{{"shared.sendMessage" | translate}} </button>
 		</div>
 	</div>
 </ng-template>
