--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -20,7 +20,7 @@
 	<div class="row mt-2" >
 		<div class="col-lg-12 col-md-12">
 		<div class=" mt-2">
-			<label style="margin-bottom:0px;" class="font-weight-bold">Add Custom Requirements </label>	
+			<label style="margin-bottom:0px;" class="font-weight-bold"> {{"shared.addCustom" | translate }}</label>	
 		</div>
 		</div>
 		<div class="col-lg-5 col-md-4">
@@ -34,7 +34,7 @@
 	<div class="row mt-4">
 		<div class="col-lg-6 col-md-12" >	
 			<div class=" form-group">
-				<label class="font-weight-bold" >{{"postJob.certification" | translate }}</label>
+				<label class="font-weight-bold" >{{"userProfile.certification" | translate }}</label>
 				<mat-form-field class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipLists aria-label="certification">
