--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -2,7 +2,7 @@
 	<div class="row mt-5 ">
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.totalYearsOfExperience" | translate }}(Min)</label>
+				<label>{{"userProfile.totalYearsOfExperience" | translate }}(Min)</label>
 				<input  (ngModelChange)="keyPress()"  appMarkAsterisk numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
 				<app-control-messages [control]="f['experience']"></app-control-messages>
 				<small *ngIf="totalExpError"  class="text-danger">Total is greater than SAP Experience</small>
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.totalYearsOfSapExperience" | translate }}(Min)</label>
+				<label>{{"matches.totalYearsOfSapExperience" | translate }}(Min)</label>
 				<input  (ngModelChange)="keyPress()"  appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
 				<app-control-messages [control]="f['sap_experience']"></app-control-messages>
 				<small *ngIf="sapExpError" class="text-danger">SAP is not greater than Total Experience</small>
@@ -18,7 +18,7 @@
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.education" | translate }}</label>	
+				<label>{{"userProfile.education" | translate }}</label>	
 				<ngx-select
 					[placeholder]="'Select Degree'"
 					class="text-capitalize"
@@ -36,7 +36,7 @@
 	<div class="row mt-2">
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.domainExperience" | translate }}</label>
+				<label>{{"userProfile.domainExperience" | translate }}</label>
 				<ngx-select
 					appMarkAsterisk
 					[placeholder]="'Select Domain'"
@@ -55,7 +55,7 @@
 	</div>
 	<div class="row mt-2">
 		<div class="col-lg-12 col-md-6">
-			<label>{{"postJob.handsOnWith" | translate }} </label>
+			<label>{{"userProfile.handsOnWith" | translate }} </label>
 			<div appMarkAsterisk></div>
 		</div>
 	</div>
@@ -111,7 +111,7 @@
 	<div class="row mt-3">
 		<div class="col-lg-9 col-md-6">
 			<div class=" form-group">
-				<label>{{"dashboard.knowledgeOn" | translate }} </label>
+				<label>{{"userProfile.knowledgeOn" | translate }} </label>
 				<ngx-select
 					class="text-capitalize"
 					[placeholder]="'Select Other SAP Skills'"
@@ -145,7 +145,7 @@
 	<div class="row mt-2">
 		<div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"postJob.programmingSkills" | translate }}</label>
+				<label >{{"userProfile.programmingSkills" | translate }}</label>
 				<mat-form-field appMarkAsterisk class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipList aria-label="programmingSkills">
@@ -173,7 +173,7 @@
 		</div>	
 		<div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"dashboard.otherSkills" | translate }}</label>
+				<label >{{"userProfile.otherSkills" | translate }}</label>
 				<mat-form-field appMarkAsterisk class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipLists aria-label="niceToHave">
@@ -203,7 +203,7 @@
 		</div> -->
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label >{{"postJob.endToEndImplementation" | translate }} </label>
+				<label >{{"userProfile.endToEnd" | translate }} </label>
 				<input appMarkAsterisk numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
 			</div>
 		</div>
@@ -223,25 +223,25 @@
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group"></div>
 			<div class=" form-group">
-				<label class="font-weight-bold">{{"postJob.workAuthorization" | translate }} </label>
+				<label class="font-weight-bold">{{"userProfile.workAuthorization" | translate }} </label>
 				<div class="mt-2">
 					<div class="custom-control custom-radio custom-control-inline">
 						<input  (click)="handleChange($event,0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline0"
 							name="work_authorization" class="custom-control-input">
 						<label class="custom-control-label"
-							for="customRadioInline0">{{"postJob.shouldBeACitizenPr" | translate }}</label>
+							for="customRadioInline0">{{"userProfile.shouldBeACitizenPr" | translate }}</label>
 					</div>
 					<div class="custom-control custom-radio custom-control-inline">
 						<input  (click)="handleChange($event,1)"[value]="1" formControlName="work_authorization" type="radio" id="customRadioInline1"
 							name="work_authorization" class="custom-control-input">
 						<label class="custom-control-label"
-							for="customRadioInline1">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</label>
+							for="customRadioInline1">{{"userProfile.shouldBeHavingAWorkPermit" | translate }}</label>
 					</div>
 					<div class="custom-control custom-radio custom-control-inline">
 						<input (click)="handleChange($event,2)" [value]="2" formControlName="work_authorization" type="radio" id="customRadioInline2"
 							name="work_authorization" class="custom-control-input">
 						<label class="custom-control-label"
-							for="customRadioInline2">Should be a Citizen / PR / Authorized to Work</label>
+							for="customRadioInline2">{{"userProfile.shouldBeHavingAWorkPermitOrWork" | translate }}</label>
 					</div>
 				</div>
 			</div>
@@ -251,7 +251,7 @@
 	<div class="row mt-3">
 		<div class="col-lg-2 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.travel" | translate }} </label>
+				<label>{{"userProfile.travel" | translate }} </label>
 				<select appMarkAsterisk formControlName="travel_opportunity" class="form-control">
 					<option [value]="null" disabled >{{"common.select" | translate }}</option>
 					<option *ngFor="let travel of travelArray; let i = index" [value]="travel?.id">
@@ -262,7 +262,7 @@
 			</div>
 		</div>
 		<div class="col-lg-2 col-md-6" style="margin-top: 42px;">
-			<label class="font-weight-bold">{{"postJob.visaSponsorship" | translate }} </label>
+			<label class="font-weight-bold">{{"userProfile.visaSponsorship" | translate }} </label>
 		</div>
 		<div class="col-lg-2 col-md-6" style="margin-top: 42px;">
 			<div class=" form-group">
@@ -277,7 +277,7 @@
 			</div>
 		</div>
 		<div class="col-lg-2 col-md-6" style="margin-top: 42px;">
-			<label class="font-weight-bold">Need References</label>
+			<label class="font-weight-bold">{{"userProfile.needReferences" | translate }}</label>
 		</div>
 		<div class="col-lg-2 col-md-6" style="margin-top: 42px;">
 			<div class=" form-group">
