--- a/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-5">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Account Setting</li>
+          <li class="breadcrumb-item active" aria-current="page">{{"shared.accountSetting" | translate}}</li>
         </ol>
       </div>
     </div>
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 title">
-        <h2>Account Setting</h2>
+        <h2>{{"shared.accountSetting" | translate}}</h2>
       </div>
     </div>
     <app-change-password [role]="'employer'">
