--- a/frontend/src/app/modules/features/employer/saved-profile/saved-profile.component.html
+++ b/frontend/src/app/modules/features/employer/saved-profile/saved-profile.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-12">
         <form class="form-inline">
           <div class="form-group mr-2">
-          <label>{{"home.search" | translate}} : </label>
+          <label>{{"shared.search" | translate}} : </label>
           </div>
           <div class="form-group">
           <input [formControl]="searchField" type="text" class="form-control form-control-sm" placeholder="By Name, Location..." style="min-width:400px;">
@@ -56,11 +56,11 @@
                       [class.disabled]="!onGetFilteredValue(item?.doc_resume)"
                       (click)="onGetFilteredValue(item?.doc_resume) && onToggleResumeForm(true, (savedProfileMeta?.doc_resume?.path + '/' + savedProfileMeta?.doc_resume?.folder + '/' + onGetFilteredValue(item?.doc_resume)))"
                       class="btn btn-outline-blue btn-sm mr-2" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate}}</a>
+                      <i class="fas fa-file-alt"></i> {{"shared.resume" | translate}}</a>
                     </span>
                     <span data-toggle="modal" data-target="#notes" (click)="onToggleAddNotesModal(true,item)">
                       <a  class="btn btn-outline-green btn-sm" href="javascript:;">
-                      <i class="fas fa-edit"></i>{{"home.notes" | translate}}</a>
+                      <i class="fas fa-edit"></i>{{"shared.notes" | translate}}</a>
                     </span>
                   </div>
                 </div>
