--- a/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
@@ -7,7 +7,7 @@
 					<i class="fas fa-arrow-left"></i>
 				</button>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Candidate View Jobs</li>
+          <li class="breadcrumb-item active" aria-current="page">{{"shared.candidateViewJobs" | translate}}</li>
         </ol>
       </div>
       <div class="col-lg-7 clearfix">
@@ -30,11 +30,11 @@
 										<h5 class="text-capitalize">{{postedJobsDetails?.title}}</h5>
 									</div>
 									<div class="col-lg-6 text-right" >
-										<a class="btn btn-sm" *ngIf="postedJobsDetails['status'] == 3"  style="margin-right: 4px;    color: #fff;border-color: #b30606;background: #b71111;" href="javascript:;" ><i class="fas fa-file-alt"></i> Closed</a>
-										<a class="btn btn-outline-green btn-sm" *ngIf="postedJobsDetails?.is_job_applied == 0" (click)="onToggleResumeSelectModal(true, postedJobsDetails) && postedJobsDetails['status'] == 1" style="margin-right: 4px;" href="javascript:;" ><i class="fas fa-file-alt"></i> Apply</a>
-										<a class="btn btn-outline-green btn-sm applied-btn-green" *ngIf="postedJobsDetails?.is_job_applied != 0" style="margin-right: 4px;" href="javascript:;" ><i class="fas fa-file-alt"></i> Applied</a>
-										<a class="btn btn-outline-blue btn-sm" (click)="onToggleJDModal(true)" href="javascript:;" style="margin-right: 4px;"><i class="fas fa-file-alt"></i> Description</a>
-										<a class="btn btn-outline-blue btn-sm"  *ngIf="isShowApply && postedJobsDetails['status'] == 1"  (click)="navigateMatches()" href="javascript:;"><i class="fas fa-file-alt"></i> Show Matches</a>
+										<a class="btn btn-sm" *ngIf="postedJobsDetails['status'] == 3"  style="margin-right: 4px;    color: #fff;border-color: #b30606;background: #b71111;" href="javascript:;" ><i class="fas fa-file-alt"></i> {{"shared.closed" | translate}}</a>
+										<a class="btn btn-outline-green btn-sm" *ngIf="postedJobsDetails?.is_job_applied == 0" (click)="onToggleResumeSelectModal(true, postedJobsDetails) && postedJobsDetails['status'] == 1" style="margin-right: 4px;" href="javascript:;" ><i class="fas fa-file-alt"></i> {{"shared.apply" | translate}}</a>
+										<a class="btn btn-outline-green btn-sm applied-btn-green" *ngIf="postedJobsDetails?.is_job_applied != 0" style="margin-right: 4px;" href="javascript:;" ><i class="fas fa-file-alt"></i> {{"shared.applied" | translate}}</a>
+										<a class="btn btn-outline-blue btn-sm" (click)="onToggleJDModal(true)" href="javascript:;" style="margin-right: 4px;"><i class="fas fa-file-alt"></i> {{"shared.description" | translate}}</a>
+										<a class="btn btn-outline-blue btn-sm"  *ngIf="isShowApply && postedJobsDetails['status'] == 1"  (click)="navigateMatches()" href="javascript:;"><i class="fas fa-file-alt"></i> {{"shared.showMatches" | translate}}</a>
 										
 									</div>
 								</div>
@@ -54,18 +54,18 @@
 									</div>
 									<div class="col-lg-6" style="text-align: right;">
 										<ng-container *ngIf="postedJobsDetails?.salary_type == 0">
-											<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / hr'}}</h6>
+											<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / hr'}}</h6>
 										</ng-container>
 										<ng-container *ngIf="postedJobsDetails?.salary_type ==1">
-											<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual '}}</h6>
+											<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual '}}</h6>
 										</ng-container>
 										<ng-container *ngIf="postedJobsDetails?.salary_type ==2">
-											<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / month'}}</h6>
+											<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / month'}}</h6>
 										</ng-container>
 										<ng-container  *ngIf="postedJobsDetails?.salary_type < 0">
 											--
 										</ng-container>
-										<h6 class="text-capitalize job-cardh6">{{"postJob.remote" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.remote)}} </h6>
+										<h6 class="text-capitalize job-cardh6">{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.remote)}} </h6>
 										<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}} </h6> -->
 									</div>
 								</div>
@@ -80,7 +80,7 @@
 			<div class="col-lg-4">
 				<div class="title" *ngIf="postedJobsDetails?.screening_process && postedJobsDetails?.screening_process.length">
 				  <h2>
-					Screening Process           
+					{{"shared.screeningProcess" | translate}}        
 				  </h2>
 				</div>
 				<div class="sidebar-widget px-4" *ngIf="postedJobsDetails?.screening_process && postedJobsDetails?.screening_process.length">
