--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -34,7 +34,8 @@
 										</div>
 										<div class="float-right" *ngIf="item?.status == 1 || item?.is_job_applied ">
 											<button [ngClass]="{'applied-btn-green': (item?.is_job_applied ), 'btn-outline-green': !item?.is_job_applied}" [disabled]="item?.is_job_applied " type="button" class="btn btn-sm" (click)="onToggleResumeSelectModals(true, item)"> <i class="fas fa-check"></i>
-												{{(item?.is_job_applied ) ? 'Applied' : 'Apply Now'}}
+												<a *ngIf="item?.is_job_applied" style="color: #fff;">{{"shared.applied" | translate}} </a>
+												<a *ngIf="!item?.is_job_applied" style="color: #fff;">{{"shared.applyNow" | translate}} </a>
 											</button>
 										</div>
 									</div>
@@ -67,7 +68,7 @@
 					</div>
 				</ng-container>
 				<ng-template #elseTemplate>
-					<p>No Jobs Found</p>
+					<p> {{"shared.jobsNotFound" | translate}}  </p>
 				</ng-template>
 				<div class="d-flex justify-content-center" style="background: #f8f8f8;"  *ngIf="postedJobMeta?.count > 0 && postedJobMeta?.total > 10" >
 					<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
@@ -79,9 +80,9 @@
 			</div>
 			<div class="col-lg-4 col-md-5">
 				<div class="title">
-					<h2>Filter
+					<h2>{{"shared.filter" | translate}}
 						<button *ngIf="customObject?.keys(utilsHelperService.clean(tempQueryParams))?.length > 2" (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
-							<i class="fa fa-times" aria-hidden="true"></i>Clear
+							<i class="fa fa-times" aria-hidden="true"></i>{{"shared.clear" | translate}}
 						</button>
 					</h2>
 				</div>
@@ -89,7 +90,7 @@
 					<div class=" my-scrollbar">
 						<div class="card">
 							<div class="card-header" data-toggle="collapse" data-target="#collapseExperience" aria-expanded="false" aria-controls="collapseExperience">
-								Experience 
+								{{"shared.experience" | translate}}  
 								<i class="fas fa-angle-down float-right pt-1"></i>
 							</div>
 							<div class="card-body collapse multi-collapse show" id="collapseExperience">
@@ -105,7 +106,7 @@
 						</div>
 						<div class="card mt-4">
 							<div class="card-header" data-toggle="collapse" data-target="#collapseJoptype" aria-expanded="false" aria-controls="collapseJoptype">
-								Job Type  
+								{{"shared.jobType" | translate}}   
 								<i class="fas fa-angle-down float-right pt-1"></i>
 							</div>
 							<div [ngClass]="{'show': queryParams?.type}" class="card-body collapse multi-collapse" id="collapseJoptype">
@@ -121,7 +122,7 @@
 						</div>
 						<div class="card mt-4">
 							<div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary">
-								Salary 
+								{{"shared.salary" | translate}}   
 								<i class="fas fa-angle-down float-right pt-1"></i>
 							</div>
 							<div [ngClass]="{'show': (queryParams?.min_salary && queryParams?.max_salary)}" class="card-body p-3 collapse multi-collapse" id="collapseSalary">
@@ -130,7 +131,7 @@
 						</div>
 						<div class="card mt-4">
 							<div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
-								SAP Skills  
+								{{"shared.sapSkills" | translate}}    
 								<i class="fas fa-angle-down float-right pt-1"></i>
 							</div>
 							<div [ngClass]="{'show': skills?.length}" class="card-body p-3 collapse multi-collapse" id="collapseSkills">
