--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber > 1">
 		<div class="form-group">
 			<button (click)="onPrevious()" type="button" class="btn btn-secondary btn-block btn-lg btnPrev">
-				{{"common.previous" | translate }}
+				{{"shared.previous" | translate }}
 			</button>
 		</div>
 	</div>
@@ -11,19 +11,19 @@
 		<div class="form-group">
 			<button [disabled]="(!createCandidateForm.controls.personalDetails.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 1" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{userInfo?.profile_completed ? 'Update & Next' : ("common.next" | translate) }}
+				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
 			</button>
 			<button [disabled]="(!createCandidateForm.controls.educationExp.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{userInfo?.profile_completed ? 'Update & Next' : ("common.next" | translate) }}
+				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
 			</button>
 			<button [disabled]="(!createCandidateForm.controls.skillSet.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-				{{userInfo?.profile_completed ? 'Update & Next' : ("common.next" | translate) }}
+				{{userInfo?.profile_completed ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
 			</button>
 			<button  [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
 				(click)="onToggleRegisterReview(true)">
-				{{"common.submit" | translate }}
+				{{"shared.submit" | translate }}
 			</button>
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 		<div class="form-group">
 			<button [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" (click)="onToggleRegisterReview(true)" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext">
-				Update
+				{{"shared.update" | translate }}
 			</button>
 		</div>
 	</div>
