--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-header/create-candidate-header.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-header/create-candidate-header.component.html
@@ -2,14 +2,14 @@
   <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 1}">
     <a [ngClass]="{'active': currentTabInfo.tabNumber == 1}"
       (click)="userInfo?.profile_completed && onTabChange({tabName: 'Personal Detail', tabNumber: 1})" class="nav-link" href="javascript:;">
-      {{"postYourResume.personalDetails" | translate }}
+      {{"userProfile.personalDetails" | translate }}
     </a>
   </li>
 
   <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
     <a [ngClass]="{'active': currentTabInfo.tabNumber == 2}"
       (click)="userInfo?.profile_completed && onTabChange({tabName: 'Education Experience', tabNumber: 2})" class="nav-link" href="javascript:;">
-      {{"postYourResume.educationExperience" | translate }}
+      {{"userProfile.educationExperience" | translate }}
     </a>
   </li>
 
@@ -17,14 +17,14 @@
     <a [ngClass]="{'active': currentTabInfo.tabNumber == 3}"
       (click)="userInfo?.profile_completed && onTabChange({tabName: 'Skillsets', tabNumber: 3})"
       class="nav-link" href="javascript:;">
-      {{"postYourResume.skillsets" | translate }}
+      {{"userProfile.skillsets" | translate }}
     </a>
   </li>
 
   <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 4}">
     <a [ngClass]="{'active': currentTabInfo.tabNumber == 4}"
       (click)="userInfo?.profile_completed && onTabChange({tabName: 'Job Preference', tabNumber: 4})" class="nav-link" href="javascript:;">
-      {{"postYourResume.jobPreference" | translate }}
+      {{"userProfile.jobPreference" | translate }}
     </a>
   </li>
 </ul>
