--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -2,7 +2,7 @@
 <div class="row mt-2">
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.jobType" | translate }}</label>
+				<label>{{"userProfile.jobType" | translate }}</label>
 				<div appMarkAsterisk class="mt-2"></div>
 				<div class="pt-2">
 					<button type="button" class="btn btn-fltr jobtype" id="1000"  (click)="jobClick('Full Time',$event);">Full Time</button>
@@ -15,28 +15,28 @@
 					<button type="button" class="btn btn-fltr" id="8"  (click)="jobClick('Onsite',$event);">Onsite</button> -->
 				</div>
 			</div>
-			<small *ngIf="job_type_error" class="text-danger">Please Select the job type </small>
+			<small *ngIf="job_type_error" class="text-danger">{{"userProfile.jobTypeError" | translate }}</small>
 		</div>
 	</div>
 	<div class="row mt-5 ">
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postYourResume.rolesLookingFor" | translate }}</label>
+				<label>{{"userProfile.rolesLookingFor" | translate }}</label>
 				<input formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.rolesLookingFor' | translate">
 				<app-control-messages [control]="f['job_role']"></app-control-messages>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postYourResume.arYouWillingToRelocate" | translate }}?</label>
+				<label>{{"userProfile.arYouWillingToRelocate" | translate }}?</label>
 				<div appMarkAsterisk class="mt-2">
 					<div class="custom-control custom-radio custom-control-inline">
 						<input (change)="onChangeFieldValue('willing_to_relocate', true)" [value]="true" formControlName="willing_to_relocate" type="radio" id="customRadioInline3" name="willing_to_relocate" class="custom-control-input">
-						<label class="custom-control-label" for="customRadioInline3">{{"common.yes" | translate }}</label>
+						<label class="custom-control-label" for="customRadioInline3">{{"shared.yes" | translate }}</label>
 					</div>
 					<div class="custom-control custom-radio custom-control-inline">
 						<input (change)="onChangeFieldValue('willing_to_relocate', false)" [value]="false" formControlName="willing_to_relocate" type="radio" id="customRadioInline4" name="willing_to_relocate" class="custom-control-input">
-						<label class="custom-control-label" for="customRadioInline4">{{"common.no" | translate }}</label>
+						<label class="custom-control-label" for="customRadioInline4">{{"shared.no" | translate }}</label>
 					</div>
 				</div>
 			</div>
@@ -45,9 +45,9 @@
 	<div class="row mt-2 ">
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.availability" | translate }}</label>
+				<label>{{"userProfile.availability" | translate }}</label>
 				<select appMarkAsterisk formControlName="availability" class="form-control">
-					<option [value]="null">{{"common.select" | translate }}</option>
+					<option [value]="null">{{"shared.select" | translate }}</option>
 					<option *ngFor="let type of availabilityArray" [value]="type.id">{{ type.text }}</option>
 				</select>
 				<app-control-messages [control]="f['availability']"></app-control-messages>
@@ -59,7 +59,7 @@
 				<div class="mt-2">
 					<div class="custom-control custom-checkbox mr-sm-2">
 						<input formControlName="remote_only" (change)="onChangeFieldValue('remote_only', $event?.target?.checked)" type="checkbox" class="custom-control-input" id="OnlyRemote">
-						<label class="custom-control-label" for="OnlyRemote">{{"postYourResume.onlyRemote" | translate }}</label>
+						<label class="custom-control-label" for="OnlyRemote">{{"userProfile.onlyRemote" | translate }}</label>
 					</div>
 				</div>
 			</div>
@@ -68,9 +68,9 @@
 	<div class="row mt-2" *ngIf="!childForm?.value?.jobPref?.remote_only">
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.travel" | translate }} </label>
+				<label>{{"userProfile.travel" | translate }} </label>
 				<select appMarkAsterisk formControlName="travel" class="form-control">
-					<option [value]="null">{{"common.select" | translate }}</option>
+					<option [value]="null">{{"shared.select" | translate }}</option>
 					<option *ngFor="let travel of travelArray; let i = index" [value]="travel?.id">
 						{{travel?.text}}
 					</option>
@@ -96,7 +96,7 @@
 	<div class="row mt-3">
 	<div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"postYourResume.preferredLocation" | translate }}</label>
+				<label >{{"userProfile.preferredLocation" | translate }}</label>
 				<mat-form-field class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipList aria-label="address">
@@ -163,7 +163,7 @@
 				<div class="mt-2">
 					<div class="custom-control custom-checkbox mr-sm-2">
 						<input formControlName="visa_sponsered"  type="checkbox" class="custom-control-input" id="visaSponsered">
-						<label class="custom-control-label" for="visaSponsered">{{"postJob.visaSponsered" | translate }}</label>
+						<label class="custom-control-label" for="visaSponsered">{{"userProfile.visaSponsered" | translate }}</label>
 					</div>
 				</div>
 			</div>
