--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -2,14 +2,14 @@
    <div class="row mt-5">
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-          <label>{{"postYourResume.firstName" | translate }}</label>
+          <label>{{"shared.firstName" | translate }}</label>
           <input appMarkAsterisk formControlName="first_name" type="text" class="form-control text-capitalize" placeholder="First Name">
           <app-control-messages [control]="f['first_name']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-          <label>{{"postYourResume.lastName" | translate }}</label>
+          <label>{{"shared.lastName" | translate }}</label>
           <input appMarkAsterisk formControlName="last_name" type="text" class="form-control text-capitalize" placeholder="Last Name">
           <app-control-messages [control]="f['last_name']"></app-control-messages>
         </div>
@@ -24,7 +24,7 @@
             <!-- <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple=""> -->
             <label for="file-5" *ngIf="(!defaultProfilePic && !savedUserDetails?.photo)" >
               <i class="fas fa-user-tie"></i>
-              <span>{{"postYourResume.uploadPhoto" | translate }} <br> ({{"postYourResume.dragAndDrop" | translate }})</span>
+              <span>{{"shared.uploadPhoto" | translate }} <br> ({{"shared.dragAndDrop" | translate }})</span>
             </label>
           </div>
         </div>
@@ -33,14 +33,14 @@
     <div class="row mt-2">
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-          <label>{{"postYourResume.emailAddress" | translate }}</label>
+          <label>{{"shared.emailAddress" | translate }}</label>
           <input appMarkAsterisk formControlName="email" type="email" class="form-control" placeholder="username@mail.com" value="jacky-smith2010@gmail.com">
           <app-control-messages [control]="f['email']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-          <label>{{"postYourResume.mobileNumber" | translate }}</label>
+          <label>{{"shared.mobileNumber" | translate }}</label>
           <ngx-intl-tel-input (ngModelChange)="checkNumber()"
           [maxLength]="15"  (countryChange)="onCountryChange($event)" [cssClass]="'form-control'" [preferredCountries]="preferredCountries"
           [enableAutoCountrySelect]="true" [enablePlaceholder]="true" [searchCountryFlag]="true"
@@ -58,17 +58,17 @@
     <div class="row mt-2">
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-          <label>{{"postYourResume.city" | translate}}</label>
+          <label>{{"shared.city" | translate}}</label>
           <input autocomplete="disabled"  autocomplete="off" appMarkAsterisk ngx-google-places-autocomplete
           (onAddressChange)="handleAddressChange($event)"
-          formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.city' | translate">
+          formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'shared.city' | translate">
           <app-control-messages [control]="f['city']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-          <label>{{"postYourResume.state" | translate}}</label>
-          <input autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
+          <label>{{"shared.state" | translate}}</label>
+          <input autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'shared.state' | translate">
           <app-control-messages [control]="f['state']"></app-control-messages>
         </div>
       </div>
@@ -78,14 +78,14 @@
     <div class="row mt-2">
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-          <label>{{"postYourResume.zipCode" | translate}}</label>
-          <input appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'postYourResume.zipCode' | translate">
+          <label>{{"shared.zipCode" | translate}}</label>
+          <input appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
           <app-control-messages [control]="f['zipcode']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
-           <label>{{"postYourResume.country" | translate }}</label>
+           <label>{{"shared.country" | translate }}</label>
           <input autocomplete="disabled" appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" placeholder="Country" style="text-transform: capitalize !important">
           <app-control-messages [control]="f['country']"></app-control-messages>
         </div>
@@ -94,9 +94,9 @@
 	<div class="row mt-2">
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postYourResume.nationality" | translate }} </label> 
+				<label>{{"userProfile.nationality" | translate }} </label> 
 				<select appMarkAsterisk formControlName="nationality" class="form-control" (change)="onChangeCountry($event.target.value)">
-					<option value="-1">Please Select {{"postYourResume.nationality" | translate }}</option>
+					<option value="-1">Please Select {{"userProfile.nationality" | translate }}</option>
 					<option *ngFor="let name of nationality" value={{name.id}}>{{name.nicename}}</option>
 				  </select>		
 			  <app-control-messages [control]="f['nationality']"></app-control-messages>							  
@@ -115,7 +115,7 @@
 		</div>	 -->
 		<div class="col-lg-6 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"postYourResume.previousemployers" | translate }}</label>
+				<label >{{"userProfile.previousEmployers" | translate }}</label>
 				<mat-form-field appMarkAsterisk class="example-chip-list" >
 					
 					<mat-chip-list #chipList aria-label="Previous Employer">
@@ -137,19 +137,19 @@
 	  <div class="row mt-2">
 		<div class="col-lg-5 col-md-6">
 		  <div class=" form-group">
-			<label>{{"postJob.workAuthorization" | translate }}</label>
+			<label>{{"userProfile.workAuthorization" | translate }}</label>
 			<div class="mt-2">
 			  <div class="custom-control custom-radio custom-control-inline">
 				<input (change)="onChangeFieldValue('work_authorization', 0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline5"
 				  name="work_authorization" class="custom-control-input">
 				<label class="custom-control-label"
-				  for="customRadioInline5">{{"postYourResume.iHaveWorkAuthorization" | translate }}</label>
+				  for="customRadioInline5">{{"userProfile.iHaveWorkAuthorization" | translate }}</label>
 			  </div>
 			  <div class="custom-control custom-radio custom-control-inline">
 				<input (change)="onChangeFieldValue('work_authorization', 1)" [value]="1" formControlName="work_authorization" type="radio" id="customRadioInline6"
 				  name="work_authorization" class="custom-control-input">
 				<label class="custom-control-label"
-				  for="customRadioInline6">{{"postYourResume.iNeedVisaAponsorship" | translate }}</label>
+				  for="customRadioInline6">{{"userProfile.iNeedVisaAponsorship" | translate }}</label>
 			  </div>
 			  <app-control-messages [control]="f['work_authorization']"></app-control-messages>
 			</div>
@@ -159,7 +159,7 @@
 	  <div class="row mt-2" *ngIf="showAuthorization" >
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group">
-				<label>{{"postYourResume.selectcountry" | translate }} </label>
+				<label>{{"userProfile.selectcountry" | translate }} </label>
 				<div class="pt-2">
 					<button type="button" class="btn btn-fltr" id="254" *ngIf="childForm.value.personalDetails.nationality !=254" (click)="countryClick('Europe',$event);">Europe</button>
 					<button type="button" class="btn btn-fltr" id="226" *ngIf="childForm.value.personalDetails.nationality != 226" (click)="countryClick('United States',$event);">United States</button>
@@ -176,7 +176,7 @@
 	  <div class="row mt-2" *ngIf="showAuthorization" >
 		<div class="col-lg-10 col-md-6">
 			<div class=" form-group">
-				<label>{{"postYourResume.othercountry" | translate }} </label> 
+				<label>{{"userProfile.othercountry" | translate }} </label> 
 				<ngx-select
 					class="text-capitalize"
 					[placeholder]="'Other Country'"
@@ -214,7 +214,7 @@
 		</div> -->
 		<div class="col-lg-6 col-md-12" *ngIf="showAuthorization">	
 			<div class=" form-group">
-				<label >{{"postYourResume.visatype" | translate }}</label>
+				<label >{{"userProfile.visatype" | translate }}</label>
 				<mat-form-field appMarkAsterisk class="example-chip-list" >
 					
 					<mat-chip-list #chipList aria-label="Visa Type">
@@ -235,7 +235,7 @@
 	</div>
 	 <div class="row mt-5">
 		<div class="col-lg-12 col-md-6">
-		  <label>{{"postYourResume.languageknown" | translate }}</label>
+		  <label>{{"userProfile.languageKnown" | translate }}</label>
 		  <div appMarkAsterisk></div>
 		</div>
 	  </div> 	
@@ -269,15 +269,15 @@
 		<div class="col-lg-3 col-md-4 mt-3">
 			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
 				<input type="checkbox" style="z-index: 999999;" formControlName="read" class="custom-control-input" id="read" name="read">
-				<label class="custom-control-label" for="Read">Read</label>
+				<label class="custom-control-label" for="Read">{{"shared.read" | translate }}</label>
 			</div>
 			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
 				<input type="checkbox" style="z-index: 999999;" formControlName="write" class="custom-control-input" id="write" name="write">
-				<label class="custom-control-label" for="Write">Write</label>
+				<label class="custom-control-label" for="Write">{{"shared.write" | translate }}</label>
 			 </div>
 			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
 				<input type="checkbox" style="z-index: 999999;"  formControlName="speak"  class="custom-control-input" id="speak" name="speak">
-				<label class="custom-control-label" for="Speak">Speak</label>
+				<label class="custom-control-label" for="Speak">{{"shared.speak" | translate }}</label>
 			</div>
 		</div>		
 
@@ -298,7 +298,7 @@
     <div class="row mt-4">
       <div class="col-lg-4 col-md-6">
         <h6 class="font-weight-bold mt-4 clearfix cursor-pointer" (click)="show = !show">
-          {{"postYourResume.myLinks" | translate }}<i class="fas fa-caret-down pt-3 ml-3"></i></h6>
+          {{"shared.myLinks" | translate }}<i class="fas fa-caret-down pt-3 ml-3"></i></h6>
       </div>
       <div *ngIf="show || savedUserDetails?.social_media_link?.length > 0" [@slideInOut] class="col-lg-12 col-md-6 mt-2">
         <div >
@@ -398,7 +398,7 @@
 	
 	<div class="row mt-5">
 		<div class="col-lg-12 col-md-6">
-		  <label>{{"postYourResume.addreference" | translate }}</label>
+		  <label>{{"userProfile.addreference" | translate }}</label>
 		  <div></div>
 		</div>
 	  </div> 	
