--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -2,7 +2,7 @@
 <div formGroupName="skillSet">
   <div class="row mt-5">
     <div class="col-lg-12 col-md-6">
-      <label>{{"postYourResume.handsOnExperience" | translate }}</label>
+      <label>{{"userProfile.handsOnExperience" | translate }}</label>
       <div appMarkAsterisk></div>
     </div>
   </div>
@@ -60,7 +60,7 @@
   <div class="row mt-3">
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
-        <label>{{"dashboard.knowledgeOn" | translate }} </label>
+        <label>{{"userProfile.knowledgeOn" | translate }} </label>
         <ngx-select
         class="text-capitalize"
         [placeholder]="'Select Skills'"
@@ -95,7 +95,7 @@
   <div class="row mt-2">
 	<div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"postJob.programmingSkills" | translate }}</label>
+				<label >{{"userProfile.programmingSkills" | translate }}</label>
 				<mat-form-field appMarkAsterisk class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipList aria-label="programmingSkills">
@@ -134,7 +134,7 @@
   <div class="row mt-2">
   <div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"postYourResume.others" | translate }}</label>
+				<label >{{"userProfile.others" | translate }}</label>
 				<mat-form-field appMarkAsterisk class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipLists aria-label="othersSkills">
@@ -165,7 +165,7 @@
   <div class="row mt-2">
 	<div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"postJob.certification" | translate }}</label>
+				<label >{{"userProfile.certification" | translate }}</label>
 				<mat-form-field class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipListss aria-label="certification">
