--- a/frontend/src/app/shared/component/modal/delete-modal/delete-modal.component.html
+++ b/frontend/src/app/shared/component/modal/delete-modal/delete-modal.component.html
@@ -10,7 +10,7 @@
       Are you sure you want to permanently delete <i class="color-pink text-capitalize">{{showRecordName}}</i>&nbsp;?
     </div>
     <div class="modal-footer full-width">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="onModelClosed()">Cancel</button>
+      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="onModelClosed()">{{"shared.cancel" | translate}}</button>
       <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="onModelSubmitted()">Delete</button>
     </div>
   </div>
