--- a/frontend/src/app/shared/component/modal/job-description/job-description.component.html
+++ b/frontend/src/app/shared/component/modal/job-description/job-description.component.html
@@ -1,6 +1,6 @@
 <ng-template #jdModal let-modal>
   <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Job Description</h5>
+    <h5 class="modal-title" id="exampleModalLabel"></h5>
     <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
@@ -11,6 +11,6 @@
     </div>
     <div class="modal-footer">
     <!-- <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button> -->
-    <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-theme-blue btn-sm" data-dismiss="modal">Ok</button>
+    <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-theme-blue btn-sm" data-dismiss="modal">{{"shared.ok" | translate}}</button>
     </div>
 </ng-template>
