--- a/frontend/src/app/shared/component/modal/resume-select/resume-select.component.html
+++ b/frontend/src/app/shared/component/modal/resume-select/resume-select.component.html
@@ -1,6 +1,6 @@
 <ng-template #coverSelectModal let-modal>
     <div class="modal-header">
-      <h5 class="modal-title">Upload Resume</h5>
+      <h5 class="modal-title">{{"shared.addResume" | translate}}</h5>
       <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -9,7 +9,7 @@
 		<div class="col-lg alert">
 				<label class="text-black-50">
 					<h1 class="text-black-50 mb-0"><i class="far fa-plus-square"></i></h1>
-					{{"common.addResume" | translate}}
+					{{"shared.addResume" | translate}}
 					<input #userResume type="file" hidden (change)="handleFileInput($event,'cover');">
 				</label>
 		</div>
@@ -21,21 +21,21 @@
 <ng-template #resumeTitleModal let-modal>
   <form method="post" (ngSubmit)="onSaveResume()" #resumeNgForm="ngForm" [formGroup]="resumeForm">
     <div class="modal-header">
-      <h5 class="modal-title">Add Resume Tilte</h5>
+      <h5 class="modal-title">{{"shared.add" | translate}} {{"shared.addResumeTitle" | translate}}</h5>
       <button type="button" (click)="mbRef?.close()" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
       </div>
       <div class="modal-body">
       <div class=" form-group">
-        <label class="h5">Resume Title</label>
+        <label class="h5">{{"shared.addResumeTitle" | translate}}</label>
         <input formControlName="title" type="text" class="form-control" placeholder="Enter Resume Title">
         <app-control-messages [control]="f['title']"></app-control-messages>
       </div>
       </div>
       <div class="modal-footer">
-      <button type="button" (click)="mbRef?.close()" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-      <button [disabled]="!resumeForm.valid" type="button" (click)="onSaveResume()" class="btn btn-theme-blue " data-dismiss="modal">Save</button>
+      <button type="button" (click)="mbRef?.close()" class="btn btn-secondary" data-dismiss="modal">{{"shared.cancel" | translate}}</button>
+      <button [disabled]="!resumeForm.valid" type="button" (click)="onSaveResume()" class="btn btn-theme-blue " data-dismiss="modal">{{"shared.save" | translate}}</button>
       </div>
   </form>
 
