--- a/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
+++ b/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
@@ -1,6 +1,6 @@
 <ng-template #sendMailModal let-modal>
   <div class="modal-header">
-    <h5 class="modal-title" id="sendMail">Job Preview </h5>
+    <h5 class="modal-title" id="sendMail">{{"shared.jobPreview" | translate}}</h5>
     <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
@@ -37,12 +37,12 @@
     </app-shared-job-profile>
 	<div class="col-lg-12 border-top pt-3">	</div>
 	<div class="col-lg-12">
-	<h6>Job Description</h6>
+	<h6>{{"shared.jobDesc" | translate}}</h6>
 	<p style="word-break: break-all;" [innerHtml]="jobInfo?.description"></p>		
 	</div>
     </div>
     <div class="modal-footer">
-    <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    <button (click)="onShortListUser()" type="button" class="btn btn-theme-blue" data-dismiss="modal" data-toggle="modal" data-target="#successMsg" >Send Mail</button>
+    <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary" data-dismiss="modal">{{"shared.cancel" | translate}}</button>
+    <button (click)="onShortListUser()" type="button" class="btn btn-theme-blue" data-dismiss="modal" data-toggle="modal" data-target="#successMsg" >{{"shared.sendMail" | translate}}</button>
     </div>
 </ng-template>
