--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -1,14 +1,14 @@
 <div class="row mt-3 info-box">
 	<div class="col-lg-12">
 		<div class="pj-title mb-3">
-			 <h6>{{"dashboard.personalDetails" | translate }}</h6>
+			 <h6>{{"userProfile.personalDetails" | translate }}</h6>
 		</div>
 	</div>
 	<div class="col-lg-6">
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.nationality" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.nationality" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.relocation" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.relocation" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -37,7 +37,7 @@
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
 					<li class="list-group-item">
-					{{"dashboard.education" | translate }}
+					{{"userProfile.education" | translate }}
 				</li>
 				</ul>
 			</div>
@@ -52,7 +52,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.jobType" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.jobType" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -66,7 +66,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.availability" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.availability" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -80,7 +80,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.workAuthorisation" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.workAuthorisation" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -88,7 +88,7 @@
 					{{utilsHelperService.onConvertArrayToString(userInfo?.visa_type)}}
 				</ul>
 				<ul class="list-group ul-value" *ngIf="userInfo?.work_authorization == 1 ">
-					{{"postYourResume.iNeedVisaAponsorship" | translate }}
+					{{"userProfile.iNeedVisaAponsorship" | translate }}
 				</ul>
 			</div>
 		</div>
@@ -97,7 +97,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"postJob.travel" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.travel" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -111,7 +111,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"postJob.remote" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.remote" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -125,7 +125,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.workAuthorisationIn" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.workAuthorisationIn" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info ul-value">
@@ -137,7 +137,7 @@
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.preferredLocation" | translate }}</li>
+					<li class="list-group-item">{{"userProfile.preferredLocation" | translate }}</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 info">
@@ -152,14 +152,14 @@
 <div class="row mt-3 info-box">
 	<div class="col-lg-12">
 		<div class="pj-title mb-3">
-			 <h6>{{"dashboard.experienceAndSkills" | translate }}</h6>
+			 <h6>{{"userProfile.experienceAndSkills" | translate }}</h6>
 		</div>
 	</div>
 </div>
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">{{"dashboard.totalYearsOfExp" | translate }}</li>
+			<li class="list-group-item">{{"userProfile.totalYearsOfExp" | translate }}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -171,7 +171,7 @@
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">{{"dashboard.totalSapExp" | translate }}</li>
+			<li class="list-group-item">{{"userProfile.totalSapExp" | translate }}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -183,7 +183,7 @@
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">{{"dashboard.domainsWorked" | translate }}</li>
+			<li class="list-group-item">{{"userProfile.domainsWorked" | translate }}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -195,7 +195,7 @@
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item" style="min-height: 46px;">{{"postYourResume.handsOnExperience" | translate }}</li>
+			<li class="list-group-item" style="min-height: 46px;">{{"userProfile.handsOnExperience" | translate }}</li>
 		</ul>
 		
 	</div>
@@ -219,7 +219,7 @@
 <div class="row" *ngIf="utilsHelperService.differenceByPropValArray(userInfo?.skills, userInfo?.hands_on_experience, 'skill_id').length!=0">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">{{"dashboard.knowledgeOn" | translate }}</li>
+			<li class="list-group-item">{{"userProfile.knowledgeOn" | translate }}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -242,7 +242,7 @@
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">{{"postJob.programmingSkills" | translate }}</li>
+			<li class="list-group-item">{{"userProfile.programmingSkills" | translate }}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -254,7 +254,7 @@
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">{{"postYourResume.others" | translate }}</li>
+			<li class="list-group-item">{{"userProfile.others" | translate }}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -266,7 +266,7 @@
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item" *ngIf="!fieldsExclude?.clients_worked">{{"postYourResume.previousEmployers" | translate}}</li>
+			<li class="list-group-item" *ngIf="!fieldsExclude?.clients_worked">{{"userProfile.previousEmployers" | translate}}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -280,7 +280,7 @@
 <div class="row">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">{{"dashboard.languageKnown" | translate}}</li>
+			<li class="list-group-item">{{"userProfile.languageKnown" | translate}}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -294,7 +294,7 @@
 <div class="row" *ngIf="userInfo?.end_to_end_implementation">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
-			<li class="list-group-item">End to End Implementation</li>
+			<li class="list-group-item"> {{"userProfile.endToEnd" | translate}}</li>
 		</ul>
 	</div>
 	<div class="col-lg-8 info">
@@ -308,7 +308,7 @@
 <div class="row mt-3 info-box" *ngIf="userInfo?.certification">
 	<div class="col-lg-12" *ngIf="userInfo?.certification.length !=0">
 		<div class="pj-title mb-3">
-			 <h6>{{"dashboard.certifications" | translate }}</h6>
+			 <h6>{{"userProfile.certifications" | translate }}</h6>
 		</div>
 	</div> 
 	<div class="col-lg-12" *ngIf="userInfo?.certification.length !=0">
@@ -324,7 +324,7 @@
 	<div class="row mt-3 info-box"  *ngIf="userInfo?.reference" >	
 		<div class="col-lg-12" *ngIf="userInfo?.reference?.length !=0">
 			<div class="pj-title mb-3 border-primary" *ngIf="userInfo?.reference[0].name && userInfo?.reference[0].email && userInfo?.reference[0].company_name">
-				<h6 class="text-blue" role="button" (click)="show = !show"> {{"dashboard.reference" | translate }}  <i class="fas fa-angle-down"></i></h6>
+				<h6 class="text-blue" role="button" (click)="show = !show"> {{"userProfile.reference" | translate }}  <i class="fas fa-angle-down"></i></h6>
 			</div>
 			<div *ngIf="show" [@slideInOut] class="row mt-2" style="padding:0px;">
 				<div class="col-lg-4 p-1" *ngFor="let reference of userInfo?.reference " >
